--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "node-example",
   "version": "0.0.1",
   "dependencies": {
-    "express": "3.1.x"
+    "express": "3.1.x",
+    "restler": "2.x.x"
   },
   "engines": {
     "node": "0.10.x",
